# product-decision-under-uncertainty

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CASE_STUDY.md  CHANGELOG.md  Dockerfile  EXECUTIVE_SUMMARY.md  LICENSE  METHODOLOGY.md  METHODS.md  Makefile  NARRATIVE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  keep-streamlit-awake.yml
.streamlit/: config.toml
artifacts/case_study/: assumption_manifest.json  decision_summary.html  diagnostics.json  diagnostics_table.md  driver_analysis.json  metadata.json  (+26 more)
scripts/: build_parameter_candidates.py  generate_case_study_artifacts.py  keep_streamlit_awake.py  profile_public_evidence.py
simulator/: README.md  __init__.py  analytics.py  analyze_data.py  app_state.py  artifact_freshness.py  assumption_registry.yaml  assumptions.md  calibration.py  calibration_contract.yaml  config.py  config.yaml  data_quality.py  data_sources.md  economic_terms.md  evidence.py  example_data.csv  formulas.md  model_spec.md  mvp_simulator.py  output_utils.py  parameter_provenance.md  parameter_registry.yaml  policy.py  presentation.py  project_paths.py  provenance.py  report_markdown.py  reporting.py  robustness.py  serialization.py  simulation.py  validation.py  visualizations.py  yaml_utils.py
static/: app_styles.css  theme-tokens.css
tests/: test_analytics.py  test_analyze_data.py  test_app_interaction.py  test_app_state.py  test_app_text.py  test_architecture.py  test_artifact_freshness.py  test_calibration_contract.py  test_cli_smoke.py  test_config_validation.py  test_csv_edge_cases.py  test_decision_policy.py  test_dependency_model.py  test_doc_consistency.py  test_docs_portability.py  test_evidence_profiler.py  test_integration.py  test_presentation.py  test_presentation_tables.py  test_properties.py  test_provenance.py  test_reporting.py  test_robustness.py  test_serialization_and_validation.py  test_simulation_logic.py  test_simulation_properties.py  test_simulator.py  test_value_of_information.py  test_visualization_contracts.py  test_visualizations.py
(+14 files in other folders)
