[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "product-decision-under-uncertainty"
version = "0.1.0"
description = "Product decision making under uncertainty simulator"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "hypothesis>=6.92.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simulator*"]
exclude = ["tests*", "archive*", "venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
